# ignition

./: .gitignore  Cargo.toml  HANDOFF.md  NOTICE  README.md  REBUILD-GUEST-ASSETS.md  ROADMAP.md  SPIKE_RESULTS.md  firecracker-hvf-porting-map.md
.github/workflows/: docs.yml
crates/arch/: Cargo.toml
crates/arch/src/: lib.rs
crates/arch/src/aarch64/: fdt.rs  kernel.rs  layout.rs  mod.rs  sysreg.rs
crates/devices/: Cargo.toml
crates/devices/src/: boot_timer.rs  bus.rs  device.rs  display.rs  lib.rs  rtc.rs  serial.rs
crates/devices/src/fuzz/: device.rs  mod.rs  protocol.rs
crates/devices/src/virtio/: balloon.rs  blk.rs  gpu.rs  guest_ram.rs  input.rs  mmio.rs  mod.rs  net.rs  queue.rs  rng.rs
crates/devices/src/virtio/vsock/: connection.rs  mod.rs  muxer.rs  packet.rs
crates/fc-api/: Cargo.toml
crates/fc-api/src/: api.rs  config.rs  main.rs  model.rs  vm.rs
crates/hvf/: Cargo.toml  build.rs
crates/hvf/src/: gic.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: main.rs  session.rs  tools.rs  vsock_client.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/vmm/: Cargo.toml
crates/vmm/src/: device_manager.rs  dirty.rs  lib.rs  names.rs  reset.rs  snapshot.rs
crates/vmm/src/fuzz/: controller.rs  metrics.rs  mod.rs
crates/vmm/src/vstate/: hvf_vcpu.rs  hvf_vm.rs  mod.rs  vcpu_manager.rs
crates/vmnet/: Cargo.toml  build.rs
crates/vmnet/src/: lib.rs  socket_vmnet.rs  vmnet_shim.c
docs/: 2d-boot-result.md  2e-virtio-result.md  2f-findings.md  HANDOFF.md  SPIKE_RESULTS.md  benchmarks.md  book.toml  diff-snapshot-benchmarks.md  diff-snapshot-research.md  firecracker-hvf-porting-map.md  fuzzing-demonstrator-result.md  phase1-followups.md  serial-rx-result.md  smp-result.md  snapshot-restore-result.md  virtio-net-result.md
docs/examples/: diff-snapshot-fanout.md
docs/examples/fuzzing/: run.sh
docs/src/: SUMMARY.md  introduction.md
docs/src/appendix/: examples.md  specs-and-plans.md
docs/src/benchmarks/: boot-and-restore.md  diff-snapshots.md  fuzzing.md
docs/src/concepts/: architecture.md  clone-primitive.md  device-model.md  vm-internal-api.md
docs/src/features/: devices.md  diff-snapshots.md  disposable-browser.md  fanout-demo.md  fc-rest-api.md  gui-display.md  mcp-server.md  sandbox.md  snapshot-restore.md  vmid.md
docs/src/fuzzing/: overview.md  running.md
docs/src/getting-started/: boot-a-guest.md  build-and-run.md  guest-assets.md
docs/src/internals/: design-decisions.md  hvf-firecracker-map.md  sandbox.md  validation-spike.md
docs/src/writeups/: disposable-browser.md
docs/superpowers/plans/: 2026-06-12-fdt-followups.md  2026-06-12-followup-cleanups.md  2026-06-12-phase1-boot-integration.md  2026-06-12-phase1-fdt-generation.md  2026-06-12-phase1-gic.md  2026-06-12-phase1-hardening.md  2026-06-12-phase1-interrupt-delivery.md  2026-06-12-phase1-kernel-loader.md  2026-06-12-phase1-uart-echo.md  2026-06-12-phase1-virtio-blk.md  2026-06-12-serial-rx.md  2026-06-12-smp.md  2026-06-12-snapshot-restore.md  2026-06-12-virtio-net.md  2026-06-13-boot-timer.md  2026-06-13-device-model-framework.md  2026-06-13-device-model-snapshot.md  2026-06-13-diff-snapshots.md  2026-06-13-fast-restore-clonefile-mmap.md  2026-06-13-multi-vcpu-snapshot.md  2026-06-13-rtc-pl031.md  2026-06-13-virtio-balloon.md  2026-06-13-virtio-rng.md  2026-06-13-virtio-vsock-e1.md  2026-06-13-vmnet-snapshot.md  2026-06-14-faster-restore.md  2026-06-14-project-documentation-mdbook.md  2026-06-14-snapshot-fuzzer-m0.md  2026-06-14-snapshot-fuzzer-m1.md  2026-06-14-snapshot-fuzzer-m2.md  2026-06-14-snapshot-fuzzer-m3.md  2026-06-15-gui-compositor-m4.md  2026-06-15-gui-display-refactor.md  2026-06-15-seatbelt-sandbox.md  2026-06-15-virtio-gpu-m1.md  2026-06-15-virtio-input-m3.md  2026-06-15-virtio-vsock-e2.md  2026-06-16-disposable-browser.md  2026-06-16-dma-dirty-tracking.md  2026-06-16-gui-snapshot-m5-phase1.md  (+10 more)
docs/superpowers/specs/: 2026-06-12-phase1-boot-integration-design.md  2026-06-12-phase1-fdt-generation-design.md  2026-06-12-phase1-gic-design.md  2026-06-12-phase1-interrupt-delivery-design.md  2026-06-12-phase1-kernel-loader-design.md  2026-06-12-phase1-uart-echo-design.md  2026-06-12-phase1-virtio-blk-design.md  2026-06-12-serial-rx-design.md  2026-06-12-smp-design.md  2026-06-12-snapshot-restore-design.md  2026-06-12-virtio-net-design.md  2026-06-13-boot-timer-design.md  2026-06-13-device-model-framework-design.md  2026-06-13-device-model-snapshot-design.md  2026-06-13-diff-snapshots-design.md  2026-06-13-fast-restore-clonefile-mmap-design.md  2026-06-13-multi-vcpu-snapshot-design.md  2026-06-13-rtc-pl031-design.md  2026-06-13-virtio-balloon-design.md  2026-06-13-virtio-rng-design.md  2026-06-13-virtio-vsock-e1-design.md  2026-06-13-vmnet-snapshot-design.md  2026-06-14-faster-restore-design.md  2026-06-14-project-documentation-mdbook-design.md  2026-06-14-snapshot-fuzzing-demonstrator-design.md  2026-06-15-gui-bringup-plan.md  2026-06-15-gui-compositor-m4-design.md  2026-06-15-gui-display-refactor-design.md  2026-06-15-seatbelt-sandbox-design.md  2026-06-15-virtio-gpu-m1-design.md  2026-06-15-virtio-input-m3-design.md  2026-06-15-virtio-vsock-e2-design.md  2026-06-16-disposable-browser-design.md  2026-06-16-dma-dirty-tracking-design.md  2026-06-16-gui-snapshot-m5-design.md  2026-06-17-mcp-server-design.md  (+9 more)
examples/: vsock-roundtrip.md
examples/fuzzing/: .gitignore  README.md  harness.c  repro.c  target.c
kimage/: .gitignore  README.md
scripts/: benchmark.py  boot_vs_restore_timing.py  diff_snapshot_bench.py  diff_snapshot_test.py  disposable-browser.sh  disposable_browser_bench.py  fanout-gui.sh  fanout_demo.py  fc_api_live_test.py  fc_api_mock_test.py  fuzz_m0_test.py  fuzz_m1_test.py  fuzz_m2_test.py  fuzz_m3_bench.py  fuzz_tpm2_bench.py  fuzz_tpm2_test.py  install-socket-vmnet.sh  make-browser-base.sh  make-tools-base.sh  mcp_live_test.py  restore_clone_test.py  restore_smp_test.py  restore_test.py  sandbox_bench.py  sign.sh  test_fanout_demo.py  vmid_live_proof.py  vsock_e2_test.py
spike/: Cargo.toml
spike/src/: main.rs
