[package]
name = "hvf-spike"
version = "0.1.0"
edition = "2024"
description = "Smoke test: boot a minimal guest on the ignition hvf crate (macOS/HVF)"

[[bin]]
name = "hvf-spike"
path = "src/main.rs"

[[bin]]
name = "uart-echo"
path = "src/bin/uart-echo.rs"

[[bin]]
name = "gic-smoke"
path = "src/bin/gic-smoke.rs"

[[bin]]
name = "boot"
path = "src/bin/boot.rs"

[dependencies]
hvf = { package = "ignition-hvf", path = "../crates/hvf" }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
vmm = { package = "ignition-vmm", path = "../crates/vmm" }
devices = { package = "ignition-devices", path = "../crates/devices" }
arch = { package = "ignition-arch", path = "../crates/arch" }
