[package]
name = "ignition-spike"
version = "0.1.0"
edition = "2024"
description = "ignition microVM boot binary (macOS/HVF)"

[[bin]]
name = "boot"
path = "src/bin/boot.rs"

[[bin]]
name = "dirty_gate"
path = "src/bin/dirty_gate.rs"

[dependencies]
ignition_hvf = { package = "ignition-hvf", path = "../crates/hvf" }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
ignition_vmm = { package = "ignition-vmm", path = "../crates/vmm" }
ignition_devices = { package = "ignition-devices", path = "../crates/devices" }
ignition_arch = { package = "ignition-arch", path = "../crates/arch" }
ignition-vmnet = { path = "../crates/vmnet" }

[dev-dependencies]
serde_json = "1"
