[package]
name = "ignition-spike"
version = "0.1.0"
edition = "2024"
description = "ignition microVM boot binary (macOS/HVF)"
autobins = false

[[bin]]
name = "boot"
path = "src/bin/boot.rs"

[dependencies]
ignition_hvf = { package = "ignition-hvf", path = "../crates/hvf" }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
ignition_vmm = { package = "ignition-vmm", path = "../crates/vmm" }
ignition_devices = { package = "ignition-devices", path = "../crates/devices" }
ignition_arch = { package = "ignition-arch", path = "../crates/arch" }
ignition-vmnet = { path = "../crates/vmnet" }
ignition-sandbox = { path = "../crates/sandbox" }
winit = "0.30"
softbuffer = "0.4"
serde_json = "1"
