[package]
name = "ignition-hvf"
version = "0.0.0"
edition = "2024"
description = "Apple Hypervisor.framework backend, lifted from libkrun (krun-hvf)"
license = "Apache-2.0"

[lib]
name = "ignition_hvf"
path = "src/lib.rs"

[dependencies]
libloading = "0.8"
log = "0.4"
ignition_arch = { package = "ignition-arch", path = "../arch" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
