[package]
name = "ignition-mcp"
version = "0.0.0"
edition = "2024"
description = "MCP server exposing ignition microVM sandboxes to agents"
license = "Apache-2.0"

[[bin]]
name = "ignition-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.9", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-std", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
