[package]
name = "ignition-vmm"
version = "0.0.0"
edition = "2024"
description = "ignition VMM core: HVF-backed vstate, device manager, machine config (WIP)"
license = "Apache-2.0"

[lib]
name = "ignition_vmm"
path = "src/lib.rs"

[dependencies]
ignition_hvf = { package = "ignition-hvf", path = "../hvf" }
ignition_arch = { package = "ignition-arch", path = "../arch" }
ignition_devices = { package = "ignition-devices", path = "../devices" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
