[package]
name = "ignition-vmnet"
version = "0.0.0"
edition = "2024"
description = "Guest networking: socket_vmnet daemon client backend (no sudo)"
license = "Apache-2.0"

[lib]
name = "ignition_vmnet"
path = "src/lib.rs"

[dependencies]
ignition_devices = { package = "ignition-devices", path = "../devices" }
log = "0.4"

[dev-dependencies]
tempfile = "3"
